--- a/lib/bindings/langs/flutter/website/index.html
+++ b/lib/bindings/langs/flutter/website/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container py-3">
-    <h1 class="text-center mb-3">breez-liquid-sdk</h1>
+    <h1 class="text-center mb-3">breez-sdk-liquid</h1>
     <p class="mono text-center">
       View documentation for:
     </p>
